[tool.poetry]
name = "recipe-management-api"
version = "0.1.0"
description = "This is a recipe management API"
authors = ["Fortune"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
coverage = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
